welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:10: error: not found: value biscuit
	if (estSurBiscuit()) biscuit = biscuit + 1;
                             ^